Uma nova alteracao

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste</title>
+    <style>
+        .div{
+            width: 20px;
+        }
+    </style>
 </head>
 <body>
     <h1>Agora sim merda</h1>
+    <p>Sofri muito para conseguir isso, desde que acorde estou a lutar para essa merdaa <div class="merda">FUCK<div></p>
 </body>
 </html>
