--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <style>
         .div{
             width: 20px;
+            color: blueviolet;
+            background-color: black;
+            border-radius: 30px;
         }
     </style>
 </head>
